--- a/app/src/main/res/layout/activity_merchant_payout.xml
+++ b/app/src/main/res/layout/activity_merchant_payout.xml
@@ -3,8 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/et_bg_gray"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".view.business.MerchantTransactionDetailsActivity">
+
 
 
     <LinearLayout
