--- a/app/src/main/res/layout/activity_merchant_transactions_list.xml
+++ b/app/src/main/res/layout/activity_merchant_transactions_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f2f4f5"
+    android:background="@color/et_bg_gray"
     android:orientation="vertical">
 
     <LinearLayout
@@ -61,6 +61,7 @@
                     android:gravity="center">
 
                     <EditText
+                        android:id="@+id/searchET"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_alignParentStart="true"
