--- a/app/src/main/res/layout/merchant_transactions_filter.xml
+++ b/app/src/main/res/layout/merchant_transactions_filter.xml
@@ -69,7 +69,7 @@
             android:orientation="horizontal">
 
             <com.google.android.material.chip.Chip
-                android:id="@+id/transTypeSOT"
+                android:id="@+id/transTypeSalesOrderToken"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -84,7 +84,7 @@
                 app:chipMinHeight="@dimen/_32sdp" />
 
             <com.google.android.material.chip.Chip
-                android:id="@+id/transTypeR"
+                android:id="@+id/transTypeRefund"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -122,7 +122,7 @@
                 app:chipMinHeight="@dimen/_32sdp" />
 
             <com.google.android.material.chip.Chip
-                android:id="@+id/transTypeWithdraw"
+                android:id="@+id/transTypeMerchantPayout"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -137,7 +137,7 @@
                 app:chipMinHeight="@dimen/_32sdp" />
 
             <com.google.android.material.chip.Chip
-                android:id="@+id/transTypeRefund"
+                android:id="@+id/transTypeMonthlyServiceFee"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -167,7 +167,7 @@
             android:orientation="horizontal">
 
             <com.google.android.material.chip.Chip
-                android:id="@+id/transStatusPending"
+                android:id="@+id/transStatusCompleted"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -182,7 +182,7 @@
                 app:chipMinHeight="@dimen/_32sdp" />
 
             <com.google.android.material.chip.Chip
-                android:id="@+id/transStatusCompleted"
+                android:id="@+id/transStatusRefund"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -204,7 +204,7 @@
             android:orientation="horizontal">
 
             <com.google.android.material.chip.Chip
-                android:id="@+id/transStatusFailed"
+                android:id="@+id/transStatusPartialRefund"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
