--- a/app/src/main/res/layout/activity_review_application.xml
+++ b/app/src/main/res/layout/activity_review_application.xml
@@ -587,29 +587,31 @@
                         android:text="Website (Optional)"
                         android:textColor="@color/dark_grey"
                         android:textSize="@dimen/_11ssp" />
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        >
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/_7sdp"
-                        android:fontFamily="@font/opensans_semibold"
-                        android:textColor="@color/primary_black"
-                        android:text="Http://"
-                        android:textSize="@dimen/_12ssp" />
+                        android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/website"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/_7sdp"
-                        android:fontFamily="@font/opensans_semibold"
-                        android:textColor="@color/primary_black"
-                        android:textSize="@dimen/_12ssp" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/_7sdp"
+                            android:fontFamily="@font/opensans_semibold"
+                            android:text="Http://"
+                            android:textColor="@color/primary_black"
+                            android:textSize="@dimen/_12ssp" />
+
+                        <TextView
+                            android:id="@+id/website"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/_7sdp"
+                            android:fontFamily="@font/opensans_semibold"
+                            android:textColor="@color/primary_black"
+                            android:textSize="@dimen/_12ssp" />
                     </LinearLayout>
+
                     <View
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/_1sdp"
@@ -1009,7 +1011,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:fontFamily="@font/opensans_regular"
-                            android:text="v2.3.3"
+                            android:text=""
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
 
@@ -1050,7 +1052,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:fontFamily="@font/opensans_regular"
-                            android:text="v2.3.3"
+                            android:text=""
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
 
@@ -1090,7 +1092,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:fontFamily="@font/opensans_regular"
-                            android:text="v2.3.3"
+                            android:text=""
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
 
@@ -1117,8 +1119,8 @@
                 android:layout_marginLeft="@dimen/_21sdp"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginRight="@dimen/_21sdp"
-                android:orientation="horizontal"
-                android:layout_marginBottom="@dimen/_20sdp">
+                android:layout_marginBottom="@dimen/_20sdp"
+                android:orientation="horizontal">
 
                 <CheckBox
                     android:id="@+id/agreeCB"
