--- a/app/src/main/res/layout/activity_business_personal_accounts.xml
+++ b/app/src/main/res/layout/activity_business_personal_accounts.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/accounts_bg_color"
+    android:orientation="vertical"
     tools:context=".view.AccountsActivity">
 
     <LinearLayout
@@ -14,9 +14,9 @@
         android:background="@color/white"
         android:orientation="vertical"
         android:paddingStart="@dimen/_20sdp"
+        android:paddingTop="@dimen/_20sdp"
         android:paddingEnd="@dimen/_20sdp"
-        android:paddingBottom="@dimen/_10sdp"
-        android:paddingTop="@dimen/_20sdp">
+        android:paddingBottom="@dimen/_10sdp">
 
         <ImageView
             android:id="@+id/accountsCloseIV"
@@ -106,15 +106,15 @@
                             android:textSize="@dimen/_12ssp"
                             tools:text="19.999" />
 
-<!--                        <TextView-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:layout_marginStart="@dimen/_5sdp"-->
-<!--                            android:fontFamily="@font/opensans_semibold"-->
-<!--                            android:text="CYN"-->
-<!--                            android:textColor="@color/primary_black"-->
-<!--                            android:textSize="@dimen/_10ssp"-->
-<!--                            tools:text="CYN" />-->
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/_5sdp"
+                            android:fontFamily="@font/opensans_semibold"
+                            android:text="CYN"
+                            android:textColor="@color/primary_black"
+                            android:textSize="@dimen/_10ssp"
+                            tools:text="CYN" />
                     </LinearLayout>
 
                 </androidx.cardview.widget.CardView>
@@ -123,15 +123,17 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_custom_tick"
-                app:tint="@color/primary_green"
                 android:layout_gravity="center"
-                android:layout_marginEnd="@dimen/_15sdp"/>
+                android:layout_marginEnd="@dimen/_15sdp"
+                android:src="@drawable/ic_custom_tick"
+                app:tint="@color/primary_green" />
         </LinearLayout>
     </LinearLayout>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -142,111 +144,111 @@
 
             <ExpandableListView
                 android:id="@+id/recyclerView"
-                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_250sdp"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:layout_marginBottom="@dimen/_15sdp"
                 android:divider="@null"
                 android:groupIndicator="@null"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
 
-    <LinearLayout
-        android:id="@+id/profileLL"
-        android:layout_width="match_parent"
-        android:visibility="gone"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/profileviewLL"
-        android:layout_marginTop="@dimen/_5sdp"
-        android:background="@color/white"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/profile_account_profile_image"
-                android:layout_width="@dimen/_35sdp"
-                android:layout_height="@dimen/_35sdp"
-                android:layout_alignParentRight="true"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/_12sdp"
-                android:layout_marginTop="@dimen/_10ssp"
-                android:layout_marginBottom="@dimen/_10ssp"
-                app:cardBackgroundColor="@color/white"
-                app:cardCornerRadius="@dimen/_18sdp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/title"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <ImageView
-                    android:id="@+id/profile_img"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:contentDescription="@string/businessProfileAccountItemChildImage"
-                    android:scaleType="fitXY"
-                    android:src="@color/light_gray"
-                    android:visibility="visible" />
-
-                <TextView
-                    android:id="@+id/b_imageTextTV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:fontFamily="@font/opensans_bold"
-                    android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_20sdp"
-                    android:visibility="gone" />
-            </androidx.cardview.widget.CardView>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:id="@+id/business_personal_account_name"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_15sdp"
-                android:fontFamily="@font/opensans_semibold"
-                android:text="Jonathan Joestar"
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_11ssp" />
-
-    </LinearLayout>
-
-     <LinearLayout
-            android:id="@+id/ll_open_account"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/profileLL"
-            android:layout_marginTop="@dimen/_5sdp"
-            android:background="@color/white"
-            android:orientation="horizontal"
-            android:visibility="visible">
-
             <LinearLayout
+                android:id="@+id/profileLL"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginVertical="@dimen/_11sdp"
-                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_below="@+id/profileviewLL"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:background="@color/white"
                 android:gravity="center"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="gone">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_add_circle" />
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/profile_account_profile_image"
+                    android:layout_width="@dimen/_35sdp"
+                    android:layout_height="@dimen/_35sdp"
+                    android:layout_alignParentRight="true"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="@dimen/_12sdp"
+                    android:layout_marginTop="@dimen/_10ssp"
+                    android:layout_marginBottom="@dimen/_10ssp"
+                    app:cardBackgroundColor="@color/white"
+                    app:cardCornerRadius="@dimen/_18sdp"
+                    app:layout_constraintStart_toEndOf="@+id/title"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <ImageView
+                        android:id="@+id/profile_img"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:contentDescription="@string/businessProfileAccountItemChildImage"
+                        android:scaleType="fitXY"
+                        android:src="@color/light_gray"
+                        android:visibility="visible" />
+
+                    <TextView
+                        android:id="@+id/b_imageTextTV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:fontFamily="@font/opensans_bold"
+                        android:textColor="@color/primary_black"
+                        android:textSize="@dimen/_20sdp"
+                        android:visibility="gone" />
+                </androidx.cardview.widget.CardView>
 
                 <TextView
+                    android:id="@+id/business_personal_account_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_15sdp"
                     android:fontFamily="@font/opensans_semibold"
-                    android:text="Open New Account"
+                    android:text="Jonathan Joestar"
                     android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_11sdp" />
+                    android:textSize="@dimen/_11ssp" />
+
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/ll_open_account"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/profileLL"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:background="@color/white"
+                android:orientation="horizontal"
+                android:visibility="visible">
 
-    </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="@dimen/_11sdp"
+                    android:layout_marginStart="@dimen/_20sdp"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_add_circle" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_15sdp"
+                        android:fontFamily="@font/opensans_semibold"
+                        android:text="Open New Account"
+                        android:textColor="@color/primary_black"
+                        android:textSize="@dimen/_11sdp" />
+                </LinearLayout>
+
+
+            </LinearLayout>
         </LinearLayout>
 
     </ScrollView>
